fixed grafana dashboard & tests
